--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,7 +10,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 }
 
 a:hover{
-    color: white;
+	color : #1b3879;
+	cursor: pointer;
 }
 
 .horizontalBar {
