--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -3,6 +3,8 @@
 
   <head>
     <th:block th:replace="fragments/head.html :: header" />
+    <link rel="stylesheet" href="css/propuesta.css">
+
   </head>
 
   <body style="width:100%" class="general">
