--- a/src/main/resources/static/css/negociacion.css
+++ b/src/main/resources/static/css/negociacion.css
@@ -13,6 +13,12 @@
     display: flex;
 }
 
+#contenidoChat{
+	border: solid 1pt lightgrey;
+	border-radius: 20px;
+	padding: 0 1em 0 1em;
+}
+
 .seleccionada{
     background-color: gray;
 }
@@ -27,6 +33,8 @@
 	border: solid 1pt lightgrey;
 	width: 100%;
 }
+
+
 
 .barraChat{
     display: flex;
@@ -60,6 +68,10 @@ input{
 	border: solid 1pt lightgrey;
 }
 
+.propuesta:hover{
+	cursor:pointer;
+}
+
 
 ul {
     list-style-type: none;
@@ -81,11 +93,11 @@ ul {
 }
 
 .recibido {
-    padding-right: 10em;
+	text-align:left;
 }
 
 .enviado {
-    padding-left: 10em;
+	text-align:right;
 }
 
 .perfil{
