--- a/src/main/resources/static/css/propuesta.css
+++ b/src/main/resources/static/css/propuesta.css
@@ -53,7 +53,7 @@ input[type=file] {
     min-width: 50px;
 }
 
-.contenido{
+.contenido-propuesta{
 	display:flex;
 	flex-direction: column;
 	justify-content: space-evenly;
