--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -4,6 +4,7 @@
 <head>
 	<th:block th:replace="fragments/head.html :: header" />
 	<link rel="stylesheet" type="text/css" href="css/contrataciones.css">
+    <script src="js/contrataciones.js" type="text/javascript"></script>
 	<title>Influencing: Contrataciones</title>
 </head>
 
@@ -13,11 +14,13 @@
 		<!-- Header -->
 		<header>
 			<div th:replace="fragments/navigation.html :: navBar(nombrePagina='CONTRATACIONES')"></div>
-			<div th:replace="fragments/navigation.html :: tagBar"></div>
 		</header>
 
 
 		<!-- !PAGE CONTENT! -->
+		<div id="divBusquedaContrataciones">
+			<input type="text" placeholder="Search.." id="inputBusquedaContrataciones">
+		</div>
 		<div>
 			<h2 style="margin: 2%;" th:if="${not #lists.isEmpty(candidaturasEnVigor)}">Contrataciones en vigor</h2>
 			<div th:each="c: ${candidaturasEnVigor}" class="w3-row-padding">
