--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -1,67 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Perfil de influencer</title>
-    <link rel="stylesheet" type="text/css" href="css/perfil.css" />
-  </head>
-  <body>
-    <header>
-        <a  id="atras" href=""><img src="img/flecha-atras.png" width="30"/></a>
-      <h1>Perfil</h1>
-      <span id="editar" class="button"><a href="/editar">Editar</a></span>
-    </header>
-    <main>
-      <section id="principal">
-        <img id="imagen-perfil" src="img/profile.png" width="200"/>
-        <h2>Pepito</h2>
-        <div id="valoracion">★★★✰✰</div>
-      </section>
-      <section id="tags">
-        <ul>
-          <li>Tag1</li>
-          <li>Tag2</li>
-          <li>Tag3</li>
-          <li>Tag4</li>
-        </ul>
-      </section>
-      <section id="propuestas">
-        <span>Historial de propuestas</span>
-        <ul>
-          <li>Propuesta1</li>
-          <li>Propuesta2</li>
-          <li>Propuesta3</li>
-          <li>Propuesta4</li>
-        </ul>
-      </section>
-      <section id="edad">
-        <h3>Edad media de los seguidores</h3>
-        <div id="edad-media">17 años</div>
-      </section>
-      <section id="seguidores">
-        <span>Seguidores en redes sociales</span>
-        <ul>
-          <li>
-           <a href="twitter.com">@pepitoTwitter</a>
-            <span class="numeroseguidores"> 200k </span>
-            <img src="img/twitter.png"   width="20"/>
-          </li>
-          <li>
-            <a href="youtube.com">@pepitoYT</a>
-            <span class="numeroseguidores"> 250k </span>
-            <img src="img/youtube.png"  width="20" />
-          </li>
-          <li>
-            <a href="instagram.com">@pepitoIG</a>
-            <span class="numeroseguidores"> 192k </span>
-            <img src="img/instagram.png" width="20" />
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      Influencing - Términos y condiciones - Contáctanos
-    </footer>
-  </body>
+<html lang="es">
+
+<head>
+  <th:block th:replace="fragments/head.html :: header" />
+  <link rel="stylesheet" type="text/css" href="css/perfil.css" />
+</head>
+
+<body>
+  <header>
+    <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='PERFIL')"></div>
+  </header>
+  <main>
+    <section id="principal">
+      <img id="imagen-perfil" src="img/profile.png" width="200" />
+      <h2 th:text="${usuario.nombre}">Pepito</h2>
+      <div id="valoracion">★★★✰✰</div>
+    </section>
+    <section id="tags" th:text="${usuario.tags}">
+      <ul>
+        <li>Tag1</li>
+        <li>Tag2</li>
+        <li>Tag3</li>
+        <li>Tag4</li>
+      </ul>
+    </section>
+    <section id="propuestas">
+      <span>Historial de propuestas</span>
+      <ul>
+        <li>Propuesta1</li>
+        <li>Propuesta2</li>
+        <li>Propuesta3</li>
+        <li>Propuesta4</li>
+      </ul>
+    </section>
+    <section id="edad">
+      <h3>Edad media de los seguidores</h3>
+      <div id="edad-media" th:text="${usuario.edad}">17 años</div>
+    </section>
+    <section id="seguidores">
+      <span>Seguidores en redes sociales</span>
+      <ul>
+        <li>
+          <a href="twitter.com">@pepitoTwitter</a>
+          <span class="numeroseguidores"> 200k </span>
+          <img src="img/twitter.png" width="20" />
+        </li>
+        <li>
+          <a href="youtube.com">@pepitoYT</a>
+          <span class="numeroseguidores"> 250k </span>
+          <img src="img/youtube.png" width="20" />
+        </li>
+        <li>
+          <a href="instagram.com">@pepitoIG</a>
+          <span class="numeroseguidores"> 192k </span>
+          <img src="img/instagram.png" width="20" />
+        </li>
+      </ul>
+    </section>
+  </main>
+</body>
+
 </html>
