Comentado css que no funciona

--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -3,7 +3,7 @@
 
 <head>
   <th:block th:replace="fragments/head.html :: header" />
-  <link rel="stylesheet" type="text/css" href="css/perfil.css" />
+  <!--<link rel="stylesheet" type="text/css" href="css/perfil.css" /> CAMBIAR CSS ENTERO-->
 </head>
 
 <body>
