--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -91,7 +91,7 @@
                     class="fa fa-leaf w3-margin-right"></i>Naturaleza</button>
             <button class="w3-button w3-white w3-hide-small tagFilter"><i
                     class="fa fa-music w3-margin-right"></i>Música</button>
-            <input type="text" placeholder="Search..">
+            <input type="text" placeholder="Search.." id="cuadroBusquedaTagBar">
         </div>
     </div>
 
