--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -1,30 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<th:block th:replace="fragments/head.html :: header" />
-	<link rel="stylesheet" type="text/css" href="css/busquedaPerfil.css" />
-	    <script src="js/busquedaPerfil.js" type="text/javascript"></script>
-
-	<title>Influencing: Búsqueda de Perfiles</title>
-</head>
-
-<body style="width:100%" class="general">
-
-	<!-- !PAGE CONTENT! -->
-	<div>
-
-		<!-- Header -->
-		<header>
-			<div th:replace="fragments/navigation.html :: navBar(nombrePagina='BÚSQUEDA DE PERFILES')"></div>
-			<div th:replace="fragments/navigation.html :: tagBar"></div>
-		</header>
-			
-		<!-- First Photo Grid-->
-		<div id="divPerfiles">
-		<div class="w3-row-padding">
-
-			<div th:each="usuario: ${usuarios}" class="w3-third w3-container w3-margin-bottom box">
+<div class="w3-row-padding">
+			<div th:each="usuario: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
 				<div class="w3-container w3-white info">
 					<div class="imagen">
 						<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
@@ -56,13 +33,3 @@
 					<a href="#" class="w3-bar-item w3-button w3-hover-blue">»</a>
 				</div>
 			</div>
-
-		</div>
-			<!-- End page content -->
-		</div>
-
-		<!-- Footer -->
-		<footer th:replace="fragments/navigation.html :: footer"></footer>
-</body>
-
-</html>
