--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -1,5 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
+
 <div class="w3-row-padding">
 			<div th:each="usuario: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
 				<div class="w3-container w3-white info">
@@ -24,12 +25,10 @@
 
 			<!-- Pagination -->
 			<div class="w3-center w3-padding-32">
-				<div class="w3-bar">
-					<a href="#" class="w3-bar-item w3-button w3-hover-blue">«</a>
-					<a href="#" class="w3-bar-item w3-blue w3-button">1</a>
-					<a href="#" class="w3-bar-item w3-button w3-hover-blue">2</a>
-					<a href="#" class="w3-bar-item w3-button w3-hover-blue">3</a>
-					<a href="#" class="w3-bar-item w3-button w3-hover-blue">4</a>
-					<a href="#" class="w3-bar-item w3-button w3-hover-blue">»</a>
+				<div class="w3-bar" >
+					<th:block th:each="i: ${#numbers.sequence(0,numeroPaginas-1)}">
+						<a class="w3-bar-item w3-button w3-hover-blue botonPaginacion" th:text="${i+1}" th:attr="data-prop-indice=${i+1},data-prop-patron=${patron}">No funciona</a>
+					</th:block>				
 				</div>
 			</div>
+			
