--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -83,6 +83,9 @@
     </main>
     <!-- Footer -->
     <footer th:replace="fragments/navigation.html :: footer"></footer>
+
+		<div th:replace="fragments/modal.html"></div>
+
 </body>
 
 </html>
