--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -26,6 +26,7 @@
 		</div>
 			<!-- End page content -->
 	</div>
+		<div th:replace="fragments/modal.html"></div>
 
 		<!-- Footer -->
 		<footer th:replace="fragments/navigation.html :: footer"></footer>
