--- a/src/main/resources/templates/busquedaPropuesta.html
+++ b/src/main/resources/templates/busquedaPropuesta.html
@@ -63,6 +63,7 @@
 	<footer th:replace="fragments/navigation.html :: footer"></footer>
 
 </div>
+		<div th:replace="fragments/modal.html"></div>
 
 </body>
 </html>
