--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -27,6 +27,9 @@
 				<input class="rounded_corner" type="text" size="40">
 				<input class="rounded_corner" type="submit" value="Buscar">
 				</div>
+				<div class="divBotonPublicar">
+					<span class="boton" id="botonCrearPropuesta">Crear propuesta</span>
+				</div>
 			</div>
 		</div>
 		
@@ -96,6 +99,9 @@
 	<div>
 	<footer th:replace="fragments/navigation.html :: footer"></footer>
 	</div>
+
+
+		<div th:replace="fragments/modal.html"></div>
 
 </body>
 
