--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -46,13 +46,8 @@
             </div>
         </div>
 
+		<div th:replace="fragments/modal.html"></div>
 
-        <div id="modal" class="w3-modal">
-            <div class="w3-modal-content">
-				<div id="propuesta-ultimatum">
-                </div>
-            </div>
-        </div>
         
 
 
