--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -125,6 +125,9 @@
 		<!-- Footer -->
 		<footer th:replace="fragments/navigation.html :: footer"></footer>
 	</div>
+	
+			<div th:replace="fragments/modal.html"></div>
+
 </body>
 
 </html>
