--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -16,8 +16,8 @@
   <!-- First Field Grid-->
   <div class="contenido-propuesta">
     <div class="texto-propuesta">
-      <h2 th:text="${propuesta.nombre}">Nombre de propuesta</h2>
-      <p th:text="${propuesta.descripcion}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
+      <h2 th:text="${propuesta?.nombre}">Nombre de propuesta</h2>
+      <p th:text="${propuesta?.descripcion}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
         vulputate eu pharetra nec,
         mattis ac
         neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend
