--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -4,6 +4,8 @@
 <head>
     <th:block th:replace="fragments/head.html :: header"/>
     <link rel="stylesheet" href="css/inicio.css">
+    <script src="js/inicio.js" type="text/javascript"></script>
+
 	<title>Influencing: Negociación</title>
 </head>
 
