Cambios sustaciales barra de navegacion y modals perfil y notificaciones

--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -39,7 +39,7 @@
 							<div class="dropdown-notificaciones" th:each="notificacion: ${notificaciones}">
 								<p th:text="${notificacion.descripcion}">Notificacion</p>
 							</div>
-							<span onclick="document.getElementById('modal').style.display='block'" class="dropdown-boton"> Ver todas</span>
+							<span class="dropdown-boton"> Ver todas</span>
 						</div>
 						<div class="dropdown-element">
 							<a href="" class="dropdown-boton"> Cerrar sesion</a>
@@ -72,13 +72,6 @@
                 </div>
             </div>
         </div>
-
-	 <div id="modal" class="w3-modal">
-            <div class="w3-modal-content">
-				<div th:replace="modals/notificaciones.html :: notificaciones(notificaciones=${notificaciones})"></div>
-            </div>
-      </div>
-
 
     </main>
     <!-- Footer -->
