--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -2,8 +2,7 @@
 
 
 <div id="modal" class="w3-modal">
-            <div class="w3-modal-content">
-                <div id="contenidoModal">
-                </div>
-            </div>
-        </div>
+    <div class="w3-modal-content">
+        <div id="contenidoModal"></div>
+    </div>
+</div>
