--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -23,6 +23,7 @@
 		<script th:src="@{/js/iwclient.js}" src="js/iwclient.js" type="text/javascript"></script>
 
 		<!--  Influencing-específico -->
+		<script th:src="@{/js/navigation.js}" src="js/navigation.js" type="text/javascript"></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/w3.css">
