--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -5,31 +5,37 @@
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fragments.css">
+    <script src="js/navigation.js" type="text/javascript"></script>
 </head>
 
 <body>
 
     <!-- NAVBAR -->
     <div th:fragment="navBar (nombrePagina)">
+        <!-- Cabecera -->
         <div class="title w3-display-container" style="padding-left: 0!important;">
-            <a class="brand w3-display-topleft" href="/inicio"><b
-                    style="margin-left: 1%; font-size: xxx-large;">INFLUENCING</b></a>
-            <div class="w3-display-bottommiddle"
-                style="color: white;font-size: larger;margin: auto;text-align: center;">
+            <!-- Logo -->
+            <a class="brand w3-display-topleft" href="/inicio"><b style="margin-left: 1%; font-size: xxx-large;">INFLUENCING</b></a>
+            
+            <!-- Titulo Pagina -->
+            <div class="w3-display-bottommiddle" style="color: white;font-size: larger;margin: auto;text-align: center;">
                 <h4><b><span th:text="${nombrePagina}">nombrePagina</span></b></h4>
             </div>
+
+            <!-- Dropdown Usuario -->
             <div class="w3-dropdown-hover w3-right w3-margin-right w3-display-right">
                 <button class="w3-button" style="color: white; "th:text="${session.u.nombre}">
                     <h4>Usuario</h4>
                 </button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4" style="right:0">
-                    <a onclick="document.getElementById('modalNoti').style.display='block'"
-                        class="w3-bar-item w3-button">Notificaciones</a>
+                    <span id="botonNotificacionesNav" class="w3-bar-item w3-button">Notificaciones</span>
+                    <span id="botonPerfilNav" class="w3-bar-item w3-button">Mi Perfil</span>
                     <a href="logout" class="w3-bar-item w3-button">Cerrar sesión</a>
                 </div>
             </div>
         </div>
         <br>
+        <!-- Barra de Navegación -->
         <div class="horizontalBar" style="text-align: left;">
             <ul class="ulFragment">
                 <li><a th:href="@{/busquedaPerfil}"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
