--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -60,7 +60,7 @@
 									pharetra nec, mattis ac neque. Duis vulputate commodo lectus...</p>
 							</div>
 							<div style="text-align:center;">
-								<button class="btn">Detalles</button>
+								<button class="btn btnDetalles" th:attr="data-id=${c.propuesta.id}">Detalles</button>
 							</div>
 
 						</div>
@@ -109,7 +109,9 @@
 									pharetra nec, mattis ac neque. Duis vulputate commodo lectus...</p>
 							</div>
 							<div style="text-align:center;">
-								<button class="btn">Detalles</button>
+								<button class="btn btnDetalles" th:attr="data-id=${c.propuesta.id}">Detalles</button>
+								<button class="btn btnValorar" th:attr="data-id=${c.id}">Valorar</button>
+
 							</div>
 
 						</div>
