--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -66,7 +66,9 @@ años</p>
 
       <h2>Imagen Campaña</h2>
       <span>
-        <input type="file" name="imagenPropuesta"><input type="submit" value="Subir" class="boton">
+        <input type="file" name="imagenPropuesta">
+    	<button class="btn">Subir</button>
+
       </span>
 
     </div>
@@ -75,7 +77,7 @@ años</p>
       <button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
       <button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
     </div>
-    <input type="button" value="Publicar" class="boton btn-publicar">
+    <button class="btn">Publicar</button>
   
   </div>
 
