--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -35,7 +35,7 @@
                         <a class="nombre"></a>
                     </div>
                     <div class="ultimatum">
-                        <span class="boton" id="botonUltimatum">Enviar Ultimatum</span>
+                        <button class="btn" id="botonUltimatum">Enviar Ultimatum</button>
                     </div>
                 </div>
                 <div id="contenidoChat">
