--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -102,7 +102,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="w3-container w3-padding-32 w3-dark-grey" th:fragment="footer">
+    <footer class="w3-container w3-padding-32 w3-dark-grey footer" th:fragment="footer">
         <div class="links" style="text-align:center;">
             <a href="#" title="home" target="_blank" class="w3-hover-opacity">Influencing</a> -
             <a href="#" title="terms" target="_blank" class="w3-hover-opacity">Términos y condiciones</a> -
