--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -2,23 +2,23 @@
 
 
 <div class="w3-row-padding">
-	<div th:each="usuario: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
+	<div th:each="u: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
 		<div class="w3-container w3-white info divResultadoBusqueda">
-			<div class="imagen" th:attr="data-id=${usuario.id}">
+			<div class="imagen" th:attr="data-id=${u.id}">
 				<img src="https://www.pngkey.com/png/full/230-2301779_best-classified-apps-default-user-profile.png"
 					style="width:80%" class="w3-hover-opacity">
 			</div>
-			<p><b th:text="${usuario.nombre +' '+ usuario.apellidos}">Usuario</b></p>
+			<p><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></p>
 			<div class="score">
-				<th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
+				<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
 					<i class="fa fa-star w3-margin-right"></i>
 				</th:block>
 			</div>
-			<div th:each="tag: ${usuario.tags}">
+			<div th:each="tag: ${u.tags}">
 				<button class="w3-button w3-white tags" style="border-radius:12px;" th:text="${tag}">Tag</button>
 			</div>
-				<p th:text="${usuario.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
-				<button class="btn btnDetalles" th:attr="data-id=${usuario.id}">Detalles</button>
+				<p th:text="${u.estado}">Praesent tincidunt sed tellus ut rutrum.</p>
+				<button class="btn btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
 
 		
 		</div>
