--- a/src/main/resources/static/css/busquedaPropuesta.css
+++ b/src/main/resources/static/css/busquedaPropuesta.css
@@ -42,14 +42,14 @@ li a:hover:not(.active) {
 }
 
 .box {
-	width: 25%;
-	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    border-radius: 20px;
-    margin: 2%;
+	width: 25% !important;
+	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
+    border-radius: 20px !important;
+    margin: 2% !important;
     padding: 1% !important;
-    background-color: #f9f9f9c4;
-    border: solid 1pt lightgrey;
-	min-height: 410px;
+    background-color: #f9f9f9c4 !important;
+    border: solid 1pt lightgrey !important;
+	min-height: 410px !important;
 }
 
 .info{
