--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -12,8 +12,6 @@
   <header>
 	<div th:if="${modo} eq 'VISTA' or ${modo} eq 'CREACION'"><div th:replace="fragments/navigation.html :: modalBar(nombrePagina='PROPUESTA')"></div></div>
     <div th:if="${modo} eq 'ULTIMATUM'or ${modo} eq 'VISTA-ULTIMATUM'"> <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='ULTIMATUM')"></div></div>
-
- 
  </header>
 
   <!-- First Field Grid-->
@@ -80,8 +78,15 @@
       <button class="w3-button w3-white tags" style="border-radius:12px;">Tag</button>
     </div>
 
+    <button  th:if="${modo} eq 'CREACION'" class="btn">Publicar</button>
+    <button  th:if="${modo} eq 'VISTA'" class="btn">Apuntarse</button>
+    <button  th:if="${modo} eq 'ULTIMATUM'" class="btn">Enviar</button>
+	<div class="botones-propuesta" th:if="${modo} eq 'VISTA-ULTIMATUM'"> 
+		<button class="btn btnAceptar">Aceptar</button>
+	    <button  class="btn btnRechazar">Rechazar</button>
+	</div>
 
-    <button class="btn">Publicar</button>
+
   
   </div>
 
