--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -7,19 +7,37 @@
 </head>
 
 <body>
+  <!-- Header -->
   <header>
-    <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='PERFIL')"></div>
+    <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
+      <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='PERFIL')"></div>
+    </div>
+    <div th:if="${modo} eq 'CREACION'">
+      <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='REGISTRO')"></div>
+    </div>
   </header>
+
+  <!-- Main -->
   <main>
-    <div id="principal">
-      <img id="imagen-perfil" src="img/profile.png" width="200" />
+
+      <div th:if="${modo} eq 'VISTA'">
+        <img id="imagen-perfil" src="img/profile.png" width="200" />
+      </div>
+      <div th:if="${modo} eq 'EDICION'">
+        <img id="imagen-perfil" src="img/profile.png" width="200" />
+        <!-- boton para borrar la foto y -->
+      </div>
+      <div th:if="${modo} eq 'CREACION'">
+        <input type="file" name="imagenPerfil">
+      </div>
+
       <h2 th:text="${usuario.nombre}">Pepito</h2>
       <div class="score">
-				<th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
+        <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
 					<i class="fa fa-star w3-margin-right"></i>
 				</th:block>
 			</div>
-    </div>
+
     <div id="tags">
         <button th:each="i : ${usuario.tags}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tag2</li>
     </div>
